# yz-music

./: .gitignore  CHANGELOG.md  README.md  install.html  manifest.json  pyproject.toml  register.ps1  userscript.user.js  yt-play.py
.github/workflows/: release.yml
scripts/: build_wheel.sh
standalone/: README.md  build.py  entitlements.mac.plist  entry.py  register_win.py  yz-music.spec
ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/scripts/: install-to-frontend.mjs
ui/src/: App.tsx  MusicPage.tsx  index.ts  store.ts  types.ts
ui/src/components/: AudioDelaySlider.tsx  AudioOnlyToggle.tsx  DependenciesDialog.tsx  DownloadsCard.tsx  LibraryBrowser.tsx  LibraryCard.tsx  LibraryFallbackStrip.tsx  LibraryPathEditor.tsx  LibrarySearch.tsx  NowPlayingCard.tsx  NowPlayingProgress.tsx  TransportControls.tsx
ui/src/components/common/: IconBtn.tsx
ui/src/hooks/: useDependencies.ts  useLiveTime.ts  useMusicWiring.ts
ui/src/lib/: api.ts  capabilities.tsx  fmt.ts  store-context.tsx  ws.tsx
ui/tests/: smoke.spec.ts
yz_music/: __init__.py  __main__.py  cli.py  dependencies.py  observer.py  persistent_settings.py  server.py  settings.py
yz_music/static/: index.html
yz_music/static/assets/: index-6ZNoJ1_i.js  index-C0Hbp35t.js  index-C38WEajQ.js  index-DNbidFnK.js
